Added pagination to API
